# trotbot_ws

./: .gitignore  README.md
.cursor/rules/: docs-dynamic-update.mdc
docs/: README.md  boot log fail.txt  boot log success.txt  temp.txt  tmp_boot.cmd
docs/trotbot/: LubanCat-4-V1 pins.md  LubanCat-boot-spi0-overlay.md  PS4 按键说明.md  README.md  ros节点话题明细.md  岗位职责.md  开发问题跟踪.md  本地运行指南.md  架构说明.md  软件需求清单.md  音频使用说明.md
src/champ/champ_base/include/: quadruped_controller.h
src/champ/champ_base/src/: quadruped_controller.cpp
src/champ_teleop/: CMakeLists.txt  README.md  champ_teleop.py
src/champ_teleop/docs/: PS4_JOY_MAPPING_zh.md
src/champ_teleop/launch/: teleop.launch.py
src/minidog/: CMakeLists.txt  package.xml
src/minidog/config/: joint_names_minidog.yaml
src/minidog/launch/: display.launch  gazebo.launch
src/minidog/meshes/: base.STL  lf_hip.STL  lf_thigh.STL  lr_thigh.STL  rf_calf.STL  rr_hip.STL  rr_thigh.STL
src/minidog/urdf/: minidog.csv  minidog.urdf
src/trotbot/: .gitignore  CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py  开发计划.md  本地运行指南.md  架构说明.md
src/trotbot/config/: champ_teleop_config.yaml  champ_teleop_ps4_cuhzct2e.defaults.yaml  gamepad_controller.yaml
src/trotbot/config/champ/: gait.yaml  gait_minidog.yaml
src/trotbot/config/ros_control/: trotbot_controller.yaml
src/trotbot/config/systemd/: trotbot-basic.service.example
src/trotbot/docs/images/: README.md
src/trotbot/hal/: __init__.py
src/trotbot/hal/hardware/: EL05_protocol_12motors_strict.dbc  EL05_protocol_full.dbc  __init__.py  adafruit_servo_controller.py  config.py  generate_el05_single_motor_dbc.py  hardware_interface.py  servo_calibration.py
src/trotbot/hal/interfaces/: __init__.py  servo_interface.py
src/trotbot/hal/ref/dog/: README.md  dog_config.h  dog_control.cc  dog_control.h  dog_state_machine.h  dog_static_poses.cc  dog_static_poses.h  gait_planner.cc  gait_planner.h  motion_tuning.md
src/trotbot/hal/ref/leg/: README.md  leg_control.cc  leg_control.h
src/trotbot/hal/ref/motor/: README.md  deep_motor.cpp  deep_motor.h  deep_motor_control.cc  deep_motor_control.h  motor_config.h  protocol.py  protocol_motor.cpp  protocol_motor.h
src/trotbot/hal/utils/: __init__.py  calibrate_servos.py  calibrate_tool.py  calibration_status.py
src/trotbot/launch/: champ_controllers.launch.py  servo_interface.launch.py  trotbot_basic.launch.py  trotbot_teleop.launch.py
src/trotbot/meshes/minidog/: lf_calf.STL  lf_foot.STL  lr_calf.STL  lr_hip.STL  rf_hip.STL  rf_thigh.STL  rr_calf.STL  rr_foot.STL
src/trotbot/patches/: apply_champ_teleop.sh
src/trotbot/resource/: trotbot
src/trotbot/rviz/: trotbot.rviz
src/trotbot/scripts/: restart_trotbot_basic.sh  test_joystick.py  test_nominal_height.py
src/trotbot/test/: README.md  test_can  test_individual_joints.py  test_leg_comprehensive.py
src/trotbot/urdf/: minidog_champ.urdf.xacro  trotbot.urdf.xacro
src/trotbot_can_bridge/: CMakeLists.txt  README.md  package.xml
src/trotbot_can_bridge/config/: bridge.yaml  calibration_profiles.md  control_gains.yaml  motor_map.yaml  power_sequence.yaml
src/trotbot_can_bridge/include/trotbot_can_bridge/: dog_mapper.hpp  frame_codec.hpp  motor_model.hpp  protocol_codec.hpp  socketcan_driver.hpp
src/trotbot_can_bridge/launch/: can_bridge.launch.py
src/trotbot_can_bridge/scripts/: el05_mit_stream_200hz_12_direct.sh  el05_motor_cansend.sh  el05_motor_explicit_cmds.sh  el05_motor_explicit_cmds_12_direct.sh
src/trotbot_can_bridge/src/: can_transport_node.cpp  motor_protocol_node.cpp  power_sequence_node.cpp  socketcan_driver.cpp
src/trotbot_status_led/: CMakeLists.txt  README.md  package.xml
src/trotbot_status_led/config/: status_led_map.yaml  status_led_params.yaml
src/trotbot_status_led/config/udev/: 99-trotbot-spidev-dialout.rules
src/trotbot_status_led/docs/: RK3588_GPIO_WS2812_HAL.md  SPI_WS2812_RK3588.md
src/trotbot_status_led/include/trotbot_status_led/: ws2812_busy_delay.hpp  ws2812_gpiod.hpp  ws2812_rockchip_mmap.hpp  ws2812_spidev.hpp  ws2812_timing.hpp
src/trotbot_status_led/launch/: status_led.launch.py
src/trotbot_status_led/scripts/: test_status_led_manual.sh
src/trotbot_status_led/src/: status_led_node.cpp  ws2812_gpiod.cpp  ws2812_gpiod_stub.cpp  ws2812_rockchip_mmap.cpp  ws2812_spidev.cpp
