<?xml version="1.0"?>
<package format="3">
  <name>trotbot_can_bridge</name>
  <version>0.1.0</version>
  <description>MIT-only dual-node CAN bridge for TrotBot.</description>

  <maintainer email="cat@example.com">cat</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
