<?xml version="1.0"?>
<package format="3">
  <name>trotbot_status_led</name>
  <version>0.1.0</version>
  <description>WS2812 status ring driven by libgpiod; subscribes to power_sequence topics (RQ-023).</description>

  <maintainer email="cat@example.com">TrotBot</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_cpp</depend>
  <depend>yaml_cpp_vendor</depend>

  <!-- System: apt install libgpiod-dev (provides gpiod.h + libgpiod) -->
  <build_depend>libgpiod-dev</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
